# MS2025-Chart-VLM

./: .gitignore  README.md  filelist.txt
chartqa-azure/: .env.example  README.md  main.py  pyproject.toml
chartqa-azure/orchestrator/: app.py  clients.py  di_utils.py  routing.py  start.sh
chartqa-azure/services/orchestrator/: app.py  clients.py  di_utils.py  requirements.txt  routing.py  start.sh
chartqa-azure/services/yolo-local/: README.md  requirements.txt
chartqa-azure/services/yolo-local/models/yolo_cls/: model_card.json
chartqa-azure/services/yolo-local/src/: cli.py  config.py  server.py
chartqa-azure/services/yolo-local/src/backends/: __init__.py  base.py  onnx_backend.py  torchscript_backend.py  ultralytics_backend.py
chartqa-azure/services/yolo-local/src/utils/: image_utils.py  io_utils.py
chartqa-azure/services/yolo-local/tests/: yolo_http_test.py
chartqa-azure/streamlit_app/: app.py
chartqa-azure/yolo_cls_service/: score.py
data-asset/: .env.example  README.md  main.py  pyproject.toml
doc-intelligence/: .env.example  main.py  pyproject.toml
model-deployment/: .env.example  README.md  app.py  deployment_error_log.txt  main.py  model_test.py  pyproject.toml
ultralytics-yolo-finetuning/: yolo11.ipynb
ultralytics-yolo-finetuning/model_artifact/: data.yaml  model_card.json  test_summary.json
ultralytics-yolo-finetuning/runs/classify/chart_nonchart_cls_y11s_1755796203/: args.yaml  results.csv
yolov11-cls-finetuning/: .env.example  README.md  yolo11.ipynb
yolov11-cls-finetuning/model_artifact/: data.yaml
(+6 files in other folders)
